[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mpluspy"
version = "1.0.3"
description = "Client for Zetcom's Museum Plus API"
authors = ["Nicolas Kessler"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Museum-of-Communication/mpluspy"
homepage = "https://github.com/Museum-of-Communication/mpluspy"
packages = [{ include = "mpluspy" }]

[tool.poetry.dependencies]
python = ">=3.8"
requests = "*"
pyaml = "*"
xmltodict = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"
